--- a/views/index.jade
+++ b/views/index.jade
@@ -77,6 +77,8 @@ html(lang='en')
 
         h3 check for open event clashes
         input#check.event-checker(type='date', placeholder='dd/mm/yyyy')
+        .spinner#loader
+          div
         p.tagline.center#results
         ul#clashed.open-list
 
