Fixed mega huge text on 1080p
Uses proposed CSS Level 4 min()

--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -14,7 +14,8 @@ h1, h2, h3, h4, h5, h6
 h1
 	// we build
 	font-size: 10rem
-	font-size: 14vw
+	font-size: 10vw
+	font-size: min(10rem, 14vw)
 	font-family: $serif
 	font-weight: 700
 	color: white
