--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -92,6 +92,9 @@
     display: inline-block
     margin: 0
     padding: 0
+    p
+      font-size: 1rem
+      color: $grey
   a
     color: $blue
     text-decoration: none
