--- a/views/index.jade
+++ b/views/index.jade
@@ -97,15 +97,19 @@ html(lang='en')
         li
           a(href='https://twitter.com/webuildsg')
             span.icon-twitter
+          p Twitter
         li
           a(href='http://www.facebook.com/webuildsg')
             span.icon-facebook
+          p Facebook
         li
           a(href='https://github.com/webuildsg')
             span.icon-github
+          p GitHub
         li
           a(href='/cal')
             span.icon-calendar
+          p Calendar
 
     script(src='public/js/script.js')
     script.
