add cal by url feature on ui is added. fixed #52.

--- a/public/css/foundation/layout.sass
+++ b/public/css/foundation/layout.sass
@@ -43,12 +43,15 @@ footer
 	background-color: lighten($yellow, 10%)
 	display: block
 	padding: 15px 0
+	margin: 2rem 0
 	p
 		color: $blue
 		text-align: center
 		margin: 0 auto
 		width: 80%
 		font-size: 1.5rem
+		position: relative
+		overflow: visible
 		a
 			text-decoration: underline
 			&:link, &:visited
