--- a/public/css/foundation/responsive.sass
+++ b/public/css/foundation/responsive.sass
@@ -30,6 +30,18 @@
     padding: 0
     li
       width: 20%
+  .input
+    padding: .1rem
+    width: 210px
+    margin-top: 0
+
+@media only screen and (max-width: 550px)
+  .input
+    padding: .5rem
+    margin-top: .5rem
+  .helptext
+    top: -8px
+    right: 120px
 
 @media only screen and (max-width: 380px)
   h1
