--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -84,7 +84,7 @@
   font-family: 'Social'
   font-size: 3rem
   font-size: 4vw
-  margin: 2rem auto
+  margin: 0 auto
   padding: 0 calc(50% - 52%/2)
   li
     width: 22%
@@ -125,6 +125,48 @@
   position: absolute
   top: -3px
   left: -3px
+
+.input
+  width: 180px
+  font-size: 1rem
+  padding: .4rem
+  border: 0
+  outline: none
+  vertical-align: top
+  border: 1px solid lighten($grey, 45%)
+  border-radius: 5px
+  text-align: center
+  &:hover + .helptext
+    display: inline-block
+
+.helptext
+  background: black
+  color: white
+  display: none
+  position: absolute
+  top: -40px
+  right: 5%
+  padding: .4rem
+  border-radius: 5px
+  &:before
+    position: absolute
+    bottom: -6px
+    left: 59px
+    display: inline-block
+    border-right: 6px solid transparent
+    border-top: 6px solid #fff
+    border-left: 6px solid transparent
+    border-top-color: #000
+    content: ''
+
+
+.input::selection
+  background: lighten($grey, 50%)
+  color: $black
+
+.input::-moz-selection
+  background: lighten($grey, 50%)
+  color: $black
 
 @-webkit-keyframes spin
   0%
