--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -136,6 +136,7 @@
   border: 1px solid lighten($grey, 45%)
   border-radius: 5px
   text-align: center
+  margin-top: -.2rem
   &:hover + .helptext
     display: inline-block
 
@@ -150,7 +151,7 @@
   border-radius: 5px
   &:before
     position: absolute
-    bottom: -6px
+    bottom: -5px
     left: 59px
     display: inline-block
     border-right: 6px solid transparent
