--- a/views/index.jade
+++ b/views/index.jade
@@ -78,7 +78,7 @@ html(lang='en')
       footer
         .container
           p Subscribe to calendar in iCal or GCal with URL
-            input(type="text", value="http://webuild.sg/cal.ics", class="input" id="selectAll")
+            input(type="text", value="http://webuild.sg/cal", class="input" id="selectAll")
             span.helptext Click to select URL
 
       .main.container
