corrected mobile alignment for cal subscription copywriting. fixed #72

--- a/views/index.jade
+++ b/views/index.jade
@@ -77,7 +77,7 @@ html(lang='en')
 
       footer
         .container
-          p Subscribe to calendar in iCal or GCal with URL
+          p Subscribe in iCal or GCal with URL
             input(type="text", value="http://webuild.sg/cal", class="input" id="selectAll")
             span.helptext Click to select URL
 
