--- a/views/index.jade
+++ b/views/index.jade
@@ -77,7 +77,8 @@ html(lang='en')
 
       footer
         .container
-          p Subscribe in iCal or GCal with URL
+          p
+            | Subscribe in <a href="http://mcb.berkeley.edu/academic-programs/seminars/ical-feed-instructions">iCal</a> or <a href="https://support.google.com/calendar/answer/37100?hl=en">GCal</a> with URL
             input(type="text", value="http://webuild.sg/cal", class="input" id="selectAll")
             span.helptext Click to select URL
 
