added engineers.sg youtube playlist. fixed #82

--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -55,6 +55,13 @@ p
 		color: $blue
 		text-align: center
 		font-size: 0.9rem
+		margin: .5rem 0
+		a
+			&:link, &:visited
+				color: $blue
+				text-decoration: underline
+			&:hover, &:active
+				color: $red
 	span
 		margin: 0 0 0 10px
 		font-size: 0.9rem
