--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -80,6 +80,10 @@
   &:focus
     background: $yellow, 10%
 
+.video
+  width: 90%
+  margin: 1rem auto 3rem
+
 .social
   font-family: 'Social'
   font-size: 3rem
