--- a/views/index.jade
+++ b/views/index.jade
@@ -25,7 +25,7 @@ html(lang='en')
     meta(property='og:description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
     meta(property='og:type', content='website')
 
-    link(href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700', rel='stylesheet', type='text/css')
+    link(href='//fonts.googleapis.com/css?family=Roboto+Slab:400,700', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='public/css/style.css')
 
     link(rel='apple-touch-icon', href='public/apple-touch-icon.png')
