fix: use the correct youtube playlist link - close #82

--- a/views/index.jade
+++ b/views/index.jade
@@ -92,7 +92,7 @@ html(lang='en')
 
         h3 open event talks
         | <div class="video">
-        |   <iframe id="playlist" width="560" height="315" src="//www.youtube.com/embed/_8dAbjQqnT0?list=PLECEw2eFfW7hYMucZmsrryV_9nIc485P1" frameborder="0" allowfullscreen></iframe>
+        |   <iframe id="playlist" width="560" height="315" src="//www.youtube.com/embed/PhYriLMnLHI?list=PLECEw2eFfW7hYMucZmsrryV_9nIc485P1" frameborder="0" allowfullscreen></iframe>
         |   <p class="explain">Subscribe to <a href="http://engineers.sg">engineers.sg</a> to get updates on talk videos</p>
         | </div>
 
