refactor: use stylus instead of sass for production build. fix #31

--- a/public/css/foundation/typography.styl
+++ b/public/css/foundation/typography.styl
@@ -1,6 +1,6 @@
 // ----- Fonts ----- //
-$sans: 'Open Sans', Helvetica Neue, sans-serif
-$serif: 'Roboto Slab', serif
+$sans = 'Open Sans', Helvetica Neue, sans-serif
+$serif = 'Roboto Slab', serif
 
 body
 	font-size: 16px //12pt
@@ -75,7 +75,7 @@ a.credit
 	text-align: center
 	text-decoration: none
 	&:link, &:visited
-		color: lighten($yellow, 10%)
+		color: lighten($yellow, 50%)
 	&:hover, &:active
 		color: $red-light
 
