--- a/public/css/foundation/layout.styl
+++ b/public/css/foundation/layout.styl
@@ -1,10 +1,10 @@
 ::-moz-selection
-	background: lighten($yellow, 10%)
+	background: lighten($yellow, 50%)
 	color: $grey
 	text-shadow: none
 
 ::selection
-	background: lighten($yellow, 10%)
+	background: lighten($yellow, 50%)
 	color: $grey
 	text-shadow: none
 
@@ -26,7 +26,7 @@ body
 header
 	width: 100%
 	background-color: $red
-	@include box-shadow(lighten(black, 50%), 0, 3px, 10px)
+	box-shadow-mixin(lighten(black, 50%), 0, 3px, 10px)
 	padding: 0 0 15px 0
 
 .main
@@ -40,7 +40,7 @@ section
 
 footer
 	width: 100%
-	background-color: lighten($yellow, 10%)
+	background-color: lighten($yellow, 50%)
 	display: block
 	padding: 15px 0
 	margin: 1rem 0
