--- a/public/css/pages/home.styl
+++ b/public/css/pages/home.styl
@@ -1,16 +1,16 @@
 .live
   width: 100%
   margin: 2em 0
-  background-color: lighten($yellow, 10%)
+  background-color: $yellow-light
   border: 3px solid $yellow
-  @include border-radius(5px)
+  border-radius(5px)
   text-align: center
   padding: .5em
   display: block
   text-decoration: none
   &:hover
     cursor: pointer
-    background-color: lighten($yellow, 5%)
+    background-color: lighten($yellow, 20%)
     border: 3px solid $blue
   p
     color: $grey
@@ -37,13 +37,13 @@
     display: inline-block
     opacity: 0
     &:nth-child(1)
-      @include animation(cycleone, 8s, linear, infinite)
+      animation(cycleone, 8s, linear, infinite)
     &:nth-child(2)
-      @include animation(cycletwo, 8s, linear, infinite)
+      animation(cycletwo, 8s, linear, infinite)
     &:nth-child(3)
-      @include animation(cyclethree, 8s, linear, infinite)
+      animation(cyclethree, 8s, linear, infinite)
     &:nth-child(4)
-      @include animation(cyclefour, 8s, linear, infinite)
+      animation(cyclefour, 8s, linear, infinite)
 
 .open-list
   list-style-type: none
@@ -57,11 +57,11 @@
     position: relative
     &:hover, &.active
       a
-        background-color: lighten($yellow, 10%)
+        background-color: lighten($yellow, 50%)
     a
       display: block
       padding: 10px
-      @include border-radius(5px)
+      border-radius(5px)
       text-decoration: none
     .stars
       float: right
@@ -76,7 +76,7 @@
   font-size: 2rem
   padding: .5rem
   border: 0
-  background: lighten($yellow, 10%)
+  background: lighten($yellow, 50%)
   font-family: $sans
   color: $grey
   margin: 2rem auto 1rem
@@ -108,7 +108,11 @@
     text-decoration: none
     &:hover, &:active
       color: $red
-      @include scale(1.2)
+      -webkit-transform: scale(1.2, 1.2)
+      -moz-transform: scale(1.2, 1.2)
+      -ms-transform: scale(1.2, 1.2)
+      -o-transform: scale(1.2, 1.2)
+      transform: scale(1.2, 1.2)
 
 .spinner
   border: 3px solid rgb(51, 51, 51)
