fix: video url. close #103

--- a/views/index.jade
+++ b/views/index.jade
@@ -61,7 +61,7 @@ body
 
       h3 open event talks
       | <div class="video">
-      |   <iframe id="playlist" width="560" height="315" src="//www.youtube.com/embed/MbZZy8GbCUE?list=PLECEw2eFfW7hYMucZmsrryV_9nIc485P1" frameborder="0" allowfullscreen></iframe>
+      |   <iframe id="playlist" width="560" height="315" src="//www.youtube.com/embed/videoseries?list=PLECEw2eFfW7hYMucZmsrryV_9nIc485P1" frameborder="0" allowfullscreen></iframe>
       |   <p class="explain">Subscribe to <a href="http://engineers.sg">engineers.sg</a> to get updates on talk videos</p>
       | </div>
 
