refactor: css variables

--- a/public/css/foundation/layout.styl
+++ b/public/css/foundation/layout.styl
@@ -1,10 +1,10 @@
 ::-moz-selection
-	background: lighten($yellow, 50%)
+	background: $yellow-light
 	color: $grey
 	text-shadow: none
 
 ::selection
-	background: lighten($yellow, 50%)
+	background: $yellow-light
 	color: $grey
 	text-shadow: none
 
@@ -40,7 +40,7 @@ section
 
 footer
 	width: 100%
-	background-color: lighten($yellow, 50%)
+	background-color: $yellow-light
 	display: block
 	padding: 15px 0
 	margin: 1rem 0
