--- a/public/css/foundation/typography.styl
+++ b/public/css/foundation/typography.styl
@@ -75,7 +75,7 @@ a.credit
 	text-align: center
 	text-decoration: none
 	&:link, &:visited
-		color: lighten($yellow, 50%)
+		color: $yellow-light
 	&:hover, &:active
 		color: $red-light
 
