--- a/public/css/pages/home.styl
+++ b/public/css/pages/home.styl
@@ -57,7 +57,7 @@
     position: relative
     &:hover, &.active
       a
-        background-color: lighten($yellow, 50%)
+        background-color: $yellow-light
     a
       display: block
       padding: 10px
@@ -76,7 +76,7 @@
   font-size: 2rem
   padding: .5rem
   border: 0
-  background: lighten($yellow, 50%)
+  background: $yellow-light
   font-family: $sans
   color: $grey
   margin: 2rem auto 1rem
