feature: language tag. fix #131

--- a/public/css/pages/home.styl
+++ b/public/css/pages/home.styl
@@ -63,9 +63,6 @@
       padding: 10px
       border-radius(5px)
       text-decoration: none
-    .stars
-      float: right
-      padding-top: 6px
 
 .first
   border-right: 2px solid $blue
@@ -172,6 +169,14 @@
     border-top-color: #000
     content: ''
 
+.label
+  display: inline-block
+  color: #E06149
+  font-size: 0.7em
+  margin: 0.3em 0px
+  border-radius: 0.5em
+  text-transform: uppercase
+  opacity: .7
 
 .input::selection
   background: lighten($grey, 50%)
