--- a/views/index.jade
+++ b/views/index.jade
@@ -1,104 +1,116 @@
-include ./layout/head.jade
-body
+doctype
+//
+  |        __         ____         ____     ____                     __               __                         ____
+  |       / /_  ___  / / /___     / __/__  / / /___ _      __   ____/ /__ _   _____  / /___  ____  ___  _____   / / /
+  |      / __ \/ _ \/ / / __ \   / /_/ _ \/ / / __ \ | /| / /  / __  / _ \ | / / _ \/ / __ \/ __ \/ _ \/ ___/  / / /
+  |     / / / /  __/ / / /_/ /  / __/  __/ / / /_/ / |/ |/ /  / /_/ /  __/ |/ /  __/ / /_/ / /_/ /  __/ /     /_/_/
+  |    /_/ /_/\___/_/_/\____/  /_/  \___/_/_/\____/|__/|__/   \__,_/\___/|___/\___/_/\____/ .___/\___/_/     (_|_)
+  |                                                                                      /_/
+//- |
 
-  //if lt IE 9
-    p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
-  div.wrapper
-    header
-      .container
-        h1 we build!
-        h2 Exploring the tech scene in Singapore? Connect with people who are&nbsp;
-          ul.people
-            li ...
-            li designers
-            li developers
-            li makers
-    .main.container
+html(lang='en')
+  include ./layout/head.jade
+  body
 
-      a.live(href="http://live.webuild.sg")
-        h3 Catch We Build LIVE
-        p A live Internet talk show with geeks in town on building, learning and sharing!
-        p.countdown
-          | in <strong>#{days}</strong> days <strong>#{hours}</strong> hours <strong>#{minutes}</strong> minutes <strong>#{seconds}</strong> seconds
-        p#livetime.time=formattedTime
+    //if lt IE 9
+      p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
-      section
-        h3 open events
-        ul.open-list.first
-          each event in events
-            li
-              a(href=event.url)
-                p= event.name
-                  span= 'on ' + event.formatted_time
-                p.tagline= 'by ' + event.group_name
+    div.wrapper
+      header
+        .container
+          h1 we build!
+          h2 Exploring the tech scene in Singapore? Connect with people who are&nbsp;
+            ul.people
+              li ...
+              li designers
+              li developers
+              li makers
+      .main.container
 
-      section
-        h3 open source
-        ul.open-list.second
-          each repo in repos
-            li
-              a(href=repo.html_url)
-                p= repo.name
-                  span= 'updated ' + moment(repo.pushed_at).endOf('hour').fromNow()
-                p.tagline= repo.description
-                p.label!= '&#9733; ' + repo.stargazers_count + '&nbsp;&nbsp;&nbsp;&nbsp;' + (repo.language || '')
+        a.live(href="http://live.webuild.sg")
+          h3 Catch We Build LIVE
+          p A live Internet talk show with geeks in town on building, learning and sharing!
+          p.countdown
+            | in <strong>#{days}</strong> days <strong>#{hours}</strong> hours <strong>#{minutes}</strong> minutes <strong>#{seconds}</strong> seconds
+          p#livetime.time=formattedTime
 
-    footer
-      .container
-        p
-          | Subscribe in <a href="http://mcb.berkeley.edu/academic-programs/seminars/ical-feed-instructions">iCal</a> or <a href="https://support.google.com/calendar/answer/37100?hl=en">GCal</a> with URL
-          input(type="text", value="https://webuild.sg/cal", class="input" id="selectAll")
-          span.helptext Click to select URL
+        section
+          h3 open events
+          ul.open-list.first
+            each event in events
+              li
+                a(href=event.url)
+                  p= event.name
+                    span= 'on ' + event.formatted_time
+                  p.tagline= 'by ' + event.group_name
 
-    .main.container
-      h3 check for open events by date
-      input#check.event-checker(type='date', placeholder='dd/mm/yyyy')
-      .spinner#loader
-        div
-      p.tagline.center#results
-      ul#clashed.open-list
+        section
+          h3 open source
+          ul.open-list.second
+            each repo in repos
+              li
+                a(href=repo.html_url)
+                  p= repo.name
+                    span= 'updated ' + moment(repo.pushed_at).endOf('hour').fromNow()
+                  p.tagline= repo.description
+                  p.label!= '&#9733; ' + repo.stargazers_count + '&nbsp;&nbsp;&nbsp;&nbsp;' + (repo.language || '')
 
-      h3 open event talks
-      | <div class="video">
-      |   <iframe id="playlist" width="560" height="315" src="//www.youtube.com/embed/videoseries?list=PLECEw2eFfW7hYMucZmsrryV_9nIc485P1" frameborder="0" allowfullscreen></iframe>
-      |   <p class="explain">Subscribe to <a href="http://engineers.sg">engineers.sg</a> to get updates on talk videos</p>
-      | </div>
+      footer
+        .container
+          p
+            | Subscribe in <a href="http://mcb.berkeley.edu/academic-programs/seminars/ical-feed-instructions">iCal</a> or <a href="https://support.google.com/calendar/answer/37100?hl=en">GCal</a> with URL
+            input(type="text", value="https://webuild.sg/cal", class="input" id="selectAll")
+            span.helptext Click to select URL
 
-    footer
-      .container
-        :markdown
-          Checkout more cool events and people in startup, arts and tech with
-          [thelist.sg](http://thelist.sg/),
-          [connections.sg](http://connections.sg/),
-          [hackerspace](http://hackerspace.sg/calendar/hackerspacesg-events/),
-          [bHappening](http://bhappening.wordpress.com/) and
-          [tech in asia](http://www.techinasia.com/tech-startup-events/)
+      .main.container
+        h3 check for open events by date
+        input#check.event-checker(type='date', placeholder='dd/mm/yyyy')
+        .spinner#loader
+          div
+        p.tagline.center#results
+        ul#clashed.open-list
 
-    ul.social
-      li
-        a(href='https://twitter.com/webuildsg')
-          span.icon-twitter
-        p Twitter
-      li
-        a(href='http://www.facebook.com/webuildsg')
-          span.icon-facebook
-        p Facebook
-      li
-        a(href='https://github.com/webuildsg')
-          span.icon-github
-        p GitHub
-      li
-        a(href='/cal')
-          span.icon-calendar
-        p Calendar
+        h3 open event talks
+        | <div class="video">
+        |   <iframe id="playlist" width="560" height="315" src="//www.youtube.com/embed/videoseries?list=PLECEw2eFfW7hYMucZmsrryV_9nIc485P1" frameborder="0" allowfullscreen></iframe>
+        |   <p class="explain">Subscribe to <a href="http://engineers.sg">engineers.sg</a> to get updates on talk videos</p>
+        | </div>
 
-  script(src='public/js/script.js')
-  script.
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      footer
+        .container
+          :markdown
+            Checkout more cool events and people in startup, arts and tech with
+            [thelist.sg](http://thelist.sg/),
+            [connections.sg](http://connections.sg/),
+            [hackerspace](http://hackerspace.sg/calendar/hackerspacesg-events/),
+            [bHappening](http://bhappening.wordpress.com/) and
+            [tech in asia](http://www.techinasia.com/tech-startup-events/)
 
-      ga('create', 'UA-37308530-1', 'auto');
-      ga('send', 'pageview');
+      ul.social
+        li
+          a(href='https://twitter.com/webuildsg')
+            span.icon-twitter
+          p Twitter
+        li
+          a(href='http://www.facebook.com/webuildsg')
+            span.icon-facebook
+          p Facebook
+        li
+          a(href='https://github.com/webuildsg')
+            span.icon-github
+          p GitHub
+        li
+          a(href='/cal')
+            span.icon-calendar
+          p Calendar
+
+    script(src='public/js/script.js')
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-37308530-1', 'auto');
+        ga('send', 'pageview');
