feature: add google plus page in link tag. #152

--- a/views/layout/head.jade
+++ b/views/layout/head.jade
@@ -5,7 +5,7 @@ head
   meta(name='description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
   meta(name='keywords', content='Singapore, SG, open community, open source, software, hardware, programming, design, maker movement, free events, free tech events')
   meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-
+  link(rel='publisher', href='https://plus.google.com/+WebuildSg')
   meta(property='og:image', content='public/logo.png')
   meta(property='og:url', content='http://www.webuild.sg')
   meta(property='og:site_name', content='www.webuild.sg')
