:bug: fix: remove placeholder from input type date. #152

--- a/views/index.jade
+++ b/views/index.jade
@@ -65,7 +65,7 @@ html(lang='en')
 
       .main.container
         h3 check for open events by date
-        input#check.event-checker(type='date', placeholder='dd/mm/yyyy')
+        input#check.event-checker(type='date')
         .spinner#loader
           div
         p.tagline.center#results
