:arrow_up: upgrade dependancies

--- a/views/index.jade
+++ b/views/index.jade
@@ -79,13 +79,7 @@ html(lang='en')
 
       footer
         .container
-          :markdown
-            Checkout more cool events and people in startup, arts and tech with
-            [thelist.sg](http://thelist.sg/),
-            [connections.sg](http://connections.sg/),
-            [hackerspace](http://hackerspace.sg/calendar/hackerspacesg-events/),
-            [bHappening](http://bhappening.wordpress.com/) and
-            [tech in asia](http://www.techinasia.com/tech-startup-events/)
+          <p>Checkout more cool events and people in startup, arts and tech with <a href="http://thelist.sg/">thelist.sg</a>, <a href="http://connections.sg/">connections.sg</a>, <a href="http://hackerspace.sg/calendar/hackerspacesg-events/">hackerspace</a>, <a href="http://bhappening.wordpress.com/">bhappening</a>, <a href="http://www.techinasia.com/tech-startup-events/">tech in asia</a></p>
 
       ul.social
         li
