docs: cleanup readme

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,7 @@ html(lang='en')
             ul.people
               li ...
               li designers
-              li developers
+              li engineers
               li makers
       .main.container
 
