--- a/views/index.jade
+++ b/views/index.jade
@@ -65,7 +65,7 @@ html(lang='en')
 
       .main.container
         h3 check for open events by date
-        input#check.event-checker(type='date')
+        input#check.event-checker(type='date', placeholder="dd/mm/yyyy")
         .spinner#loader
           div
         p.tagline.center#results
