feat: comment off the podcast countdown section

--- a/public/css/foundation/layout.styl
+++ b/public/css/foundation/layout.styl
@@ -37,6 +37,7 @@ section
 	display: inline-block
 	padding: 0
 	vertical-align: top
+	margin-top: 3em // when countdown section is off
 
 footer
 	width: 100%
