--- a/views/index.jade
+++ b/views/index.jade
@@ -28,12 +28,12 @@ html(lang='en')
               li makers
       .main.container
 
-        a.live(href="http://live.webuild.sg")
-          h3 Catch We Build LIVE
-          p A live Internet talk show with geeks in town on building, learning and sharing!
-          p.countdown
-            | in <strong>#{days}</strong> days <strong>#{hours}</strong> hours <strong>#{minutes}</strong> minutes <strong>#{seconds}</strong> seconds
-          p#livetime.time=formattedTime
+        //- a.live(href="http://live.webuild.sg")
+        //-   h3 Catch We Build LIVE
+        //-   p A live Internet talk show with geeks in town on building, learning and sharing!
+        //-   p.countdown
+        //-     | in <strong>#{days}</strong> days <strong>#{hours}</strong> hours <strong>#{minutes}</strong> minutes <strong>#{seconds}</strong> seconds
+        //-   p#livetime.time=formattedTime
 
         section
           h3 open events
