design: remove animating people

--- a/views/facebook_login.jade
+++ b/views/facebook_login.jade
@@ -7,12 +7,7 @@ body
     header
       .container
         h1 we build!
-        h2 Exploring the tech scene in Singapore? Connect with people who are&nbsp;
-          ul.people
-            li ...
-            li designers
-            li developers
-            li makers
+        h2 Exploring the tech scene in Singapore? Connect with designers, makers and engineers
     .main.container
       div#auth0(style='width: 320px; margin: 40px auto;')
 
