--- a/views/index.jade
+++ b/views/index.jade
@@ -20,12 +20,7 @@ html(lang='en')
       header
         .container
           h1 we build!
-          h2 Exploring the tech scene in Singapore? Connect with people who are&nbsp;
-            ul.people
-              li ...
-              li designers
-              li engineers
-              li makers
+          h2 Exploring the tech scene in Singapore? Connect with designers, makers and engineers
       .main.container
 
         //- a.live(href="http://live.webuild.sg")
