refactor: remove logo, apple touch icon and favicon. #193

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,7 +23,7 @@ html(lang='en')
           h2 Exploring the tech scene in Singapore? Connect with designers, makers and engineers
       .main.container
 
-        //- a.live(href="http://live.webuild.sg")
+        //- a.live(href="https://live.webuild.sg")
         //-   h3 Catch We Build LIVE
         //-   p A live Internet talk show with geeks in town on building, learning and sharing!
         //-   p.countdown
