--- a/views/layout/head.jade
+++ b/views/layout/head.jade
@@ -6,7 +6,7 @@ head
   meta(name='keywords', content='Singapore, SG, open community, open source, software, hardware, programming, design, maker movement, free events, free tech events')
   meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
   link(rel='publisher', href='https://plus.google.com/+WebuildSg')
-  meta(property='og:image', content='public/logo.png')
+  meta(property='og:image', content='https://assets.webuild.sg/logo.png')
   meta(property='og:url', content='http://www.webuild.sg')
   meta(property='og:site_name', content='www.webuild.sg')
   meta(property='og:title', content='We Build SG')
@@ -16,7 +16,8 @@ head
   link(href='//fonts.googleapis.com/css?family=Roboto+Slab:400,700', rel='stylesheet', type='text/css')
   link(rel='stylesheet', href='public/css/style.css')
 
-  link(rel='apple-touch-icon', href='public/apple-touch-icon.png')
-  link(rel='apple-touch-icon', sizes='72x72', href='public/apple-touch-icon-72x72-precomposed.png')
-  link(rel='apple-touch-icon', sizes='114x114', href='public/apple-touch-icon-114x114-precomposed.png')
-  link(rel='apple-touch-icon', sizes='144x144', href='public/apple-touch-icon-144x144-precomposed.png')
+  link(rel='icon', href='https://assets.webuild.sg/favicon.ico', type='image/x-icon')
+  link(rel='apple-touch-icon', href='https://assets.webuild.sg/apple-touch-icon.png')
+  link(rel='apple-touch-icon', sizes='72x72', href='https://assets.webuild.sg/apple-touch-icon-72x72-precomposed.png')
+  link(rel='apple-touch-icon', sizes='114x114', href='https://assets.webuild.sg/apple-touch-icon-114x114-precomposed.png')
+  link(rel='apple-touch-icon', sizes='144x144', href='https://assets.webuild.sg/apple-touch-icon-144x144-precomposed.png')
