--- a/views/layout/head.jade
+++ b/views/layout/head.jade
@@ -14,7 +14,7 @@ head
   meta(property='og:type', content='website')
 
   link(href='//fonts.googleapis.com/css?family=Roboto+Slab:400,700', rel='stylesheet', type='text/css')
-  link(rel='stylesheet', href='public/css/style.css')
+  link(rel='stylesheet', href='https://assets.webuild.sg/css/style.css')
 
   link(rel='icon', href='https://assets.webuild.sg/favicon.ico', type='image/x-icon')
   link(rel='apple-touch-icon', href='https://assets.webuild.sg/apple-touch-icon.png')
