fix: correct icon font class

--- a/views/index.jade
+++ b/views/index.jade
@@ -79,19 +79,19 @@ html(lang='en')
       ul.social
         li
           a(href='https://twitter.com/webuildsg')
-            span.icon-footer-twitter
+            span.footer-twitter
           p Twitter
         li
           a(href='http://www.facebook.com/webuildsg')
-            span.icon-footer-facebook
+            span.footer-facebook
           p Facebook
         li
           a(href='https://github.com/webuildsg')
-            span.icon-footer-github
+            span.footer-github
           p GitHub
         li
           a(href='/cal')
-            span.icon-footer-calendar
+            span.footer-calendar
           p Calendar
 
     script(src='public/js/script.js')
