--- a/views/layout/head.jade
+++ b/views/layout/head.jade
@@ -13,7 +13,7 @@ head
   meta(property='og:description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
   meta(property='og:type', content='website')
 
-  link(rel='stylesheet', href='https://assets.webuild.sg/css/style.min.css')
+  link(rel='stylesheet', href='https://assets.webuild.sg/css/style.css')
   link(rel='icon', href='https://assets.webuild.sg/favicon.ico', type='image/x-icon')
   link(rel='apple-touch-icon', href='https://assets.webuild.sg/apple-touch-icon.png')
   link(rel='apple-touch-icon', sizes='72x72', href='https://assets.webuild.sg/apple-touch-icon-72x72-precomposed.png')
