--- a/views/index.jade
+++ b/views/index.jade
@@ -49,7 +49,7 @@ html(lang='en')
                   p= repo.name
                     span= 'updated ' + moment(repo.pushed_at).endOf('hour').fromNow()
                   p.tagline= repo.description
-                  p.label!= '&#9733; ' + repo.stargazers_count + '&nbsp;&nbsp;&nbsp;&nbsp;' + (repo.language || '')
+                  p.note!= '&#9733; ' + repo.stargazers_count + '&nbsp;&nbsp;&nbsp;&nbsp;' + (repo.language || '')
 
       footer
         .container
