--- a/views/index.jade
+++ b/views/index.jade
@@ -48,7 +48,7 @@ html(lang='en')
               li
                 a(href=repo.html_url)
                   p= repo.name
-                    span= 'updated ' + moment(repo.pushed_at).endOf('hour').fromNow()
+                    span= 'updated ' + repo.formatted_time
                   p.tagline= repo.description
                   p.note!= '&#9733; ' + repo.stargazers_count + '&nbsp;&nbsp;&nbsp;&nbsp;' + (repo.language || '') + '&nbsp;&nbsp;&nbsp;&nbsp;' + repo.forks_count + ' forks' + '&nbsp;&nbsp;&nbsp;&nbsp;'  + repo.contributors.length + ' contributors'
 
