fix: do not display rsvp count if undefined. close #198

--- a/views/index.jade
+++ b/views/index.jade
@@ -39,8 +39,10 @@ html(lang='en')
                   p= event.name
                     span= 'on ' + event.formatted_time
                   p.tagline= 'by ' + event.group_name
-                  p.note!= event.rsvp_count + ' RSVP'
-
+                  - if (typeof(event.rsvp_count) !== 'undefined'){
+                    p.note!= event.rsvp_count + ' RSVP'
+                  -}
+                  
         section
           h3 open source
           ul.open-list.second
