synchronise headers with all other sister sites

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,10 +17,25 @@ html(lang='en')
       p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
     div.wrapper
-      header
-        .container
-          h1 we build!
-          h2 Exploring the tech scene in Singapore? Connect with designers, makers and engineers
+      .starter
+        header
+          .container
+            h1 we build!
+            ul.list-social
+              li 
+                span.icon-feed 
+                a(href="https://webuild.sg") main
+              li 
+                span.icon-music 
+                a(href="https://live.webuild.sg") live
+              li 
+                span.icon-cal 
+                a(href="https://data.webuild.sg") data
+              li 
+                span.icon-cc 
+                a(href="https://notes.webuild.sg") notes
+        .container 
+          p.subtitle Exploring the tech scene in Singapore? Connect with designers, makers and engineers!
       .main.container
 
         //- a.live(href="https://live.webuild.sg")
