synchronise all sister website footer

--- a/views/index.jade
+++ b/views/index.jade
@@ -108,9 +108,17 @@ html(lang='en')
             span.footer-github
           p GitHub
         li
-          a(href='/cal')
+          a(href='https://webuild.sg/cal')
             span.footer-calendar
           p Calendar
+        li
+          a(href='https://feeds.feedburner.com/WeBuildLive')
+            span.footer-rss
+          p RSS
+        li
+          a(href='https://itunes.apple.com/us/podcast/we-build-sg-live/id713804010')
+            span.footer-itunes
+          p iTunes
 
     script(src='public/js/script.js')
     script.
