design: add api link to the header. #210

--- a/views/facebook_login.jade
+++ b/views/facebook_login.jade
@@ -4,10 +4,26 @@ body
     p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
   div.wrapper
-    header
-      .container
-        h1 we build!
-        h2 Exploring the tech scene in Singapore? Connect with designers, makers and engineers
+    .starter
+      header
+        .container
+          h1 we build!
+          ul.list-social
+            li 
+              span.icon-feed 
+              a(href="https://webuild.sg") main
+            li 
+              span.icon-music 
+              a(href="https://live.webuild.sg") live
+            li 
+              span.icon-cal 
+              a(href="https://data.webuild.sg") data
+            li 
+              span.icon-cc 
+              a(href="https://notes.webuild.sg") notes
+            li 
+              span.icon-volume-medium
+              a(href="https://api.webuild.sg") api
     .main.container
       div#auth0(style='width: 320px; margin: 40px auto;')
 
