--- a/views/index.jade
+++ b/views/index.jade
@@ -34,6 +34,9 @@ html(lang='en')
               li 
                 span.icon-cc 
                 a(href="https://notes.webuild.sg") notes
+              li 
+                span.icon-volume-medium
+                a(href="https://api.webuild.sg") api
         .container 
           p.subtitle Exploring the tech scene in Singapore? Connect with designers, makers and engineers!
       .main.container
